--- a/FlickSquare/en.lproj/MainStoryboard.storyboard
+++ b/FlickSquare/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="HMv-pE-7bw">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="HMv-pE-7bw">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -32,6 +32,7 @@
                                     <outlet property="delegate" destination="t74-QM-7T8" id="Js2-fI-gSI"/>
                                 </connections>
                             </mapView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="thC-TL-srT"/>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -39,10 +40,13 @@
                             <constraint firstItem="wjW-zM-gzr" firstAttribute="bottom" secondItem="2BI-77-LYs" secondAttribute="bottom" type="default" id="EqK-5e-l1j"/>
                             <constraint firstItem="wjW-zM-gzr" firstAttribute="leading" secondItem="2BI-77-LYs" secondAttribute="leading" type="default" id="OME-kI-2oE"/>
                             <constraint firstItem="wjW-zM-gzr" firstAttribute="trailing" secondItem="2BI-77-LYs" secondAttribute="trailing" type="default" id="t0v-wT-dNC"/>
+                            <constraint firstItem="thC-TL-srT" firstAttribute="top" secondItem="2BI-77-LYs" secondAttribute="top" constant="197" id="v0F-H6-6kx"/>
+                            <constraint firstItem="thC-TL-srT" firstAttribute="centerX" secondItem="wjW-zM-gzr" secondAttribute="centerX" type="default" id="xRm-AI-GdI"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="sCF-YX-66J"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="thC-TL-srT" id="ma2-dt-Nly"/>
                         <outlet property="mapView" destination="wjW-zM-gzr" id="Tay-Xv-qSY"/>
                     </connections>
                 </viewController>
@@ -51,17 +55,6 @@
             <point key="canvasLocation" x="-38" y="7"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
