added detailviewcontroller and passed venue

--- a/FlickSquare/en.lproj/MainStoryboard.storyboard
+++ b/FlickSquare/en.lproj/MainStoryboard.storyboard
@@ -46,13 +46,53 @@
                     </view>
                     <navigationItem key="navigationItem" id="sCF-YX-66J"/>
                     <connections>
+                        <outlet property="_mapView" destination="wjW-zM-gzr" id="DhH-OK-u2X"/>
                         <outlet property="activityIndicator" destination="thC-TL-srT" id="ma2-dt-Nly"/>
-                        <outlet property="mapView" destination="wjW-zM-gzr" id="Tay-Xv-qSY"/>
+                        <segue destination="uWu-jR-T2r" kind="push" identifier="mapToDetail" id="meZ-se-yPe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CY9-Up-1mZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-38" y="7"/>
+        </scene>
+        <!--Detail View Controller - Title-->
+        <scene sceneID="XNh-ea-Wby">
+            <objects>
+                <viewController id="uWu-jR-T2r" customClass="DetailViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XsT-bN-Ncj">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s8R-i3-ZcC">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="190" id="sg1-BP-qIo"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PGy-qx-MeZ">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="258" id="e5b-F5-ULZ"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="PGy-qx-MeZ" firstAttribute="leading" secondItem="XsT-bN-Ncj" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="JCh-2i-AKn"/>
+                            <constraint firstAttribute="trailing" secondItem="PGy-qx-MeZ" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="Qou-QQ-qwD"/>
+                            <constraint firstItem="s8R-i3-ZcC" firstAttribute="top" secondItem="XsT-bN-Ncj" secondAttribute="top" constant="20" symbolic="YES" type="default" id="R6F-zk-PKr"/>
+                            <constraint firstAttribute="bottom" secondItem="PGy-qx-MeZ" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="bpS-Ie-bYK"/>
+                            <constraint firstItem="s8R-i3-ZcC" firstAttribute="leading" secondItem="XsT-bN-Ncj" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="kZZ-Ks-YYT"/>
+                            <constraint firstAttribute="trailing" secondItem="s8R-i3-ZcC" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="ohp-uO-Pgy"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="Sb2-aN-HYi"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lil-qP-b0B" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="379" y="16"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
